Added Bootstrap CSS and added CSS for leader board.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/runtime": "^7.9.2",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.2",
     "ejs": "^3.0.2",
